k8s/backups/ingress_2026-04-07_09-47.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/affinity":"cookie","nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-http-version":"1.1","nginx.ingress.kubernetes.io/proxy-read-timeout":"120","nginx.ingress.kubernetes.io/proxy-send-timeout":"120","nginx.ingress.kubernetes.io/session-cookie-expires":"3600","nginx.ingress.kubernetes.io/sessi [...]
      nginx.ingress.kubernetes.io/affinity: cookie
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
      nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
      nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
      nginx.ingress.kubernetes.io/session-cookie-name: STEAMBOT_ROUTE
      nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    creationTimestamp: "2026-02-25T12:03:30Z"
    generation: 2
    name: steambot-ingress
    namespace: steambot
    resourceVersion: "21946"
    uid: 7bc1d557-80c1-4acc-ab65-b998bf5bc836
  spec:
    ingressClassName: nginx
    rules:
    - host: communityrig.ru
      http:
        paths:
        - backend:
            service:
              name: steambot-server
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: www.communityrig.ru
      http:
        paths:
        - backend:
            service:
              name: steambot-server
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - communityrig.ru
      - www.communityrig.ru
      secretName: steambot-tls
  status:
    loadBalancer:
      ingress:
      - ip: 81.19.135.78
kind: List
metadata:
  resourceVersion: ""
